modules/private/apps/web-experience/product-navigation/product-navigation-control-menu-dxp-theme-contributor/src/main/resources/META-INF/resources/control_menu/_add_panel.scss
@import "bourbon";
@import "mixins";

body.open-admin-panel {
	padding-right: $admin-panel-width;

	.control-menu {
		@include sm() {
			padding-right: 0;
			right: $admin-panel-width;
		}
	}

	.control-menu-level-2 {
		@include sm() {
			right: $admin-panel-width;
		}
	}
}

body.open-admin-panel, body.sidenav-transition {
	@include sm() {
		overflow-x: hidden;
	}
}

.lfr-admin-panel.sidenav-menu-slider {
	z-index: 501;

	&, .product-menu {
		width: $admin-panel-width;
	}
}

.lfr-admin-panel {
	.product-menu {
		@include sm() {
			position: absolute;
			right: 0;
		}
	}

	.sidebar-body {
		border-left: 1px solid $product-menu-panel-title-active-bg;
		border-right-width: 0;
		padding: 0;
	}
}

.lfr-add-panel, .lfr-simulation-panel {
	.lfr-device-item.selected {
		color: $control-menu-level-2-bg;

		.icon {
			background-color: $control-menu-level-2-bg;
		}
	}

	.product-menu .sidebar-header {
		background-color: $control-menu-level-2-bg;
		padding: 16px 24px;
	}
}

